# proxy-wasm-katas

./: README.md
basic-authentication-filter/: Cargo.toml  README.md  definition.yaml  implementation.yaml  schema.json
basic-authentication-filter/src/: lib.rs
basic-logging-filter/: Cargo.toml  README.md  definition.yaml  implementation.yaml  schema.json
basic-logging-filter/src/: lib.rs
basic-rate-limiting-filter/: Cargo.toml  README.md  definition.yaml  implementation.yaml  schema.json
basic-rate-limiting-filter/src/: lib.rs
enforce-custom-security-header/: Cargo.toml  README.md  definition.yaml  implementation.yaml  schema.json
enforce-custom-security-header/src/: lib.rs
full-http-request-response-logging/: Cargo.toml  README.md  definition.yaml  implementation.yaml  schema.json
full-http-request-response-logging/src/: lib.rs
logging-http-request-headers/: Cargo.toml  README.md  definition.yaml  implementation.yaml  schema.json
logging-http-request-headers-as-json/: Cargo.toml  README.md  definition.yaml  implementation.yaml  schema.json
logging-http-request-headers-as-json/src/: lib.rs
logging-http-request-headers/src/: lib.rs
