[package]
name = "basic_rate_limiting_filter"
version = "1.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name="basic_rate_limiting_filter"
path="src/lib.rs"

[dependencies]
proxy-wasm = { git = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk.git", tag = "v0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = "fat"
